FIX: Align css to reflect AA Times Phase 3 project requirements

--- a/stylesheets/components/interest-links.css
+++ b/stylesheets/components/interest-links.css
@@ -5,6 +5,7 @@
     grid-template-rows: 1fr;
     gap: 0.2rem;
     padding-top: 1rem;
+    font-size: 12px;
 }
 .interest-bar > div {
     /* border: 1px solid red; */
